--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -59,10 +59,12 @@ layout: default
       {% include post_pagination.html %}
     </div>
 
+
     {% if jekyll.environment == 'production' and site.comments.provider and page.comments %}
       {% include comments.html %}
     {% endif %}
   </article>
+  
 
   {% comment %}<!-- only show related on a post page when `related: true` -->{% endcomment %}
   {% if page.id and page.related and site.related_posts.size > 0 %}
@@ -89,3 +91,11 @@ layout: default
     </div>
   {% endif %}
 </div>
+
+<script src="https://utteranc.es/client.js"
+        repo="bjybs123/bjybs123.github.io"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
